Removed all of the code outside of JRefModule for resolving JRef references after deserialization.  Instead, all resolution is done synchronously inside of deserialize.